--- a/Views/adGasolinera/adGasolinera.cshtml
+++ b/Views/adGasolinera/adGasolinera.cshtml
@@ -114,6 +114,8 @@
                             center: { lat: 13.703052612879729, lng: -89.20242358465791 },
                             zoom: 13,
                             mapTypeId: "hybrid",
+                            gestureHandling: 'greedy'
+
                         });
 
                         map.addListener('click', function (event) {
