--- a/Views/adRazonesCancelacion/adRazonesCancelacion.cshtml
+++ b/Views/adRazonesCancelacion/adRazonesCancelacion.cshtml
@@ -13,6 +13,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-12 mb-2 mb-lg-0">
+                    <label>Ingrese la razón de cancelacion</label>
                     <input type="text" class="form-control" id="input_RazonCancel">
                 </div>
                 <div class="col-lg-4 col-12">
