--- a/Views/Introduccion/Introduccion.cshtml
+++ b/Views/Introduccion/Introduccion.cshtml
@@ -12,7 +12,7 @@
 <style>
     .card{
         height: 80vh;
-        background: url(/images/intro.jpg);
+        background: url(@Url.Content("~/images/intro.jpg"));
         background-size:cover;
         background-position:center;
         /*background-repeat:no-repeat;*/
