--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -31,9 +31,11 @@
 
                 <div class=" offset-lg-1 col-lg-5 d-none d-lg-block">
                     <div class="h-100 d-flex align-items-center justify-content-center ">
-                        <div class="card p-2 mt-3">
+                        <div class="card p-2 mt-3 div-descripcion ">
                             <span class="Titulo fw-bold">¿Qué es vales combustible?</span>
                             <p class="mt-2 descripcion">Esta aplicación permite realizar un control del consumo y gasto de combustible para una flota de vehículos. A través de los gráficos pueden realizar un análisis de comportamientos de cada unidad, de consumo, recargas y eficiencia real. </p>
+
+                            <span>Powered By Software Mobde Solutions @@2024</span>
                         </div>
                     </div>
                 </div>
@@ -106,6 +108,24 @@
 </body>
 </html>
 <style>
+    /*#logIn {
+        width: 100%;
+        height: 100vh !important;
+        background: url(/images/1.jpg);
+        background-size: cover;
+    }*/
+    .div-descripcion{
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+        border-radius: 6px;
+        padding: 2em !important;
+    }
+
+    #logIn {
+        width: 100%;
+        height: 100vh !important;
+        background: url(@Url.Content("~/images/1.jpg"));
+        background-size: cover;
+    }
     .Titulo{
         color: #22406c;
         font-size: 32px;
@@ -124,9 +144,11 @@
                 click: function () { 
                     var _this = this;
                     $("#login").on('click', function () {                      
-                        $.get("/Login/iniciarSesion", { username: $("#username").val(), password: $("#password").val() }, function (data) {
+                        //$.get("/Login/iniciarSesion", { username: $("#username").val(), password: $("#password").val() }, function (data) {
+                        $.get('@Url.Action("iniciarSesion", "Login")', { username: $("#username").val(), password: $("#password").val() }, function (data) {
                             if (data.estado == 1) {
-                                window.location = "/Home/Index";
+                                //window.location = '@Url.Action("Index", "Home")';
+                                window.location.reload()
                             } else if (data.estado == 0) {
                                 _this.alert("warning", "Usuario Inactivo", data.mensaje);
 
@@ -166,7 +188,7 @@
 
                     var DataCompany = JSON.parse(localStorage.getItem("companydatos"))
                     //console.log(DataCompany)
-                    $("#Company_logo").attr("src", DataCompany.compamyLogo);
+                    $("#Company_logo").attr("src", '@Url.Content("~/")'+ DataCompany.compamyLogo);
                     $("#Company_name").text(DataCompany.companyName);
                     $("#Company_contacto").html("")
                     $("#Company_contacto").html('<i class="bi bi-telephone" > </i>' + ' Telefono: ' + DataCompany.cotancto);
