--- a/Views/adAgregarUsuario/adAgregarUsuario.cshtml
+++ b/Views/adAgregarUsuario/adAgregarUsuario.cshtml
@@ -123,7 +123,7 @@
                         </div>
                         <div class="row pt-lg-2">
                             <div class="col-lg-12">
-                                <input type="text" id="InputModal_contra" class="form-control inputModal" />
+                                <input type="text" id="InputModal_contra" class="form-control inputModal" placeholder="********"/>
                             </div>
                         </div>
                        <div class="row">
@@ -207,7 +207,7 @@
     .modal-footer{
         border-top: 0px solid #dee2e6;
     }
-
+    
     .col-command {
         text-align: center !important;
         width: 100px;
@@ -614,10 +614,13 @@
                                 return false
                             }
                         }
-                        if (_telefono.length < 8) {
-                            _this.alertModal("alerta", "Formato de telefono incorrecto, El numero de telefono debe tene 8 digitos")
-                            return false
+                        if (_telefono !== "") {
+                            if (_telefono.length < 8) {
+                                _this.alertModal("alerta", "Formato de telefono incorrecto, El numero de telefono debe tene 8 digitos")
+                                return false
+                            }
                         }
+                        
                         $("#ModalAlert").text("")
                         return true
                     },
