--- a/Views/adCentroCosto/adCentroCosto.cshtml
+++ b/Views/adCentroCosto/adCentroCosto.cshtml
@@ -12,6 +12,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-12 mb-2 mb-lg-0">
+                    <label>Ingrese nombre del centro de costo</label>
                     <input type="text" class="form-control" id="input_CentroCosto">
                 </div>
                 <div class="col-lg-4 col-12">
