--- a/Views/adConfiguracionCompany/adConfiguracionCompany.cshtml
+++ b/Views/adConfiguracionCompany/adConfiguracionCompany.cshtml
@@ -269,6 +269,12 @@
                         localStorage.clear()
                         localStorage.setItem("companydatos", JSON.stringify(data))
                     })
+                    /*var companyData = {
+                        companyName: $("#Input_CompanyName").val().trim(),
+                        compamyLogo: "images/CompanyLogo/Company13_logo.png",
+                        cotancto: "+503 8528-5355",
+                        direccion: "Raccon City"
+                    }*/
                 },
                 validaciones: {
                     formato: function (_CompanyName, _PaginaWeb, _Email, _Number1, _Number2) {
