--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -7,19 +7,19 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COMBUSTIBLEAESCORE</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/login.css" />
+    <link rel="stylesheet" href="@Url.Content("~/lib/bootstrap/css/bootstrap.min.css")" />
+    <link rel="stylesheet" href="@Url.Content("~/css/login.css")" />
 
-    <script src="~/js/jquery-3.3.1.min.js"></script>
+    <script src="@Url.Content("~/js/jquery-3.3.1.min.js")"></script>
     <script src="~/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <script src="~/lib/swalert/sweetalert2.min.js"></script>
-    <link href="~/lib/swalert/sweetalert2.min.css" rel="stylesheet" />
-    <script src="~/js/popper.min.js"></script>
-    <link href="~/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/css/materialdatetimepicker.css" rel="stylesheet" />
+    <script src="@Url.Content("~/lib/swalert/sweetalert2.min.js")"></script>
+    <link href="@Url.Content("~/lib/swalert/sweetalert2.min.css")" rel="stylesheet" />
+    <script src="@Url.Content("~/js/popper.min.js")"></script>
+    <link href="@Url.Content("~/css/bootstrap.min.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/css/materialdatetimepicker.css")" rel="stylesheet" />
 
     
 </head>
@@ -35,7 +35,7 @@
                             <span class="Titulo fw-bold">¿Qué es vales combustible?</span>
                             <p class="mt-2 descripcion">Esta aplicación permite realizar un control del consumo y gasto de combustible para una flota de vehículos. A través de los gráficos pueden realizar un análisis de comportamientos de cada unidad, de consumo, recargas y eficiencia real. </p>
 
-                            <span>Powered By Software Mobde Solutions @@2024</span>
+                            <span>Powered By Software Mobile Solutions @@2024</span>
                         </div>
                     </div>
                 </div>
