--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -13,13 +13,15 @@
     <script src="@Url.Content("~/js/jquery-3.3.1.min.js")"></script>
     <script src="~/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    @*<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">*@
+    <link rel="stylesheet" href="@Url.Content("~/lib/bootstrap-icons/font/bootstrap-icons.min.css")" />
 
     <script src="@Url.Content("~/lib/swalert/sweetalert2.min.js")"></script>
     <link href="@Url.Content("~/lib/swalert/sweetalert2.min.css")" rel="stylesheet" />
     <script src="@Url.Content("~/js/popper.min.js")"></script>
     <link href="@Url.Content("~/css/bootstrap.min.css")" rel="stylesheet" />
     <link href="@Url.Content("~/css/materialdatetimepicker.css")" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="@Url.Content("~/images/favicon.ico")" sizes="32x32">
 
     
 </head>
