--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,44 +10,44 @@
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDwL4llQcFETOysWDY5Ph_wKSwCUBUrSM8&libraries=places&v=weekly" defer></script>
 
     <!--<link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />-->
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="@Url.Content("~/css/site.css")" />
 
-    <script src="~/js/jquery-3.3.1.min.js"></script>
-    <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
+    <script src="@Url.Content("~/js/jquery-3.3.1.min.js")"></script>
+    <script src="@Url.Content("~/lib/bootstrap/js/bootstrap.bundle.min.js")"></script>
+    <link rel="stylesheet" href="@Url.Content("~/lib/bootstrap/css/bootstrap.min.css")" />
 
-    <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="@Url.Content("~/lib/bootstrap-icons/font/bootstrap-icons.min.css")" />
 
-    <link rel="stylesheet" href="~/css/navbar.css" />
+    <link rel="stylesheet" href="@Url.Content("~/css/navbar.css")" />
     <link href="https://fonts.gstatic.com" rel="preconnect">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-    <link rel="icon" type="image/png" href="~/images/favicon.ico" sizes="32x32">
+    <link rel="icon" type="image/png" href="@Url.Content("~/images/favicon.ico")" sizes="32x32">
 
     @*Core Content Start*@
 
     <link href="https://cdn.kendostatic.com/2022.2.621/styles/kendo.default-main.min.css" rel="stylesheet" type="text/css" />
     
-    <script src="~/js/jquery-3.3.1.min.js"></script>
+    <script src="@Url.Content("~/js/jquery-3.3.1.min.js")"></script>
 	<script src="https://unpkg.com/jszip/dist/jszip.min.js"></script>
 	<script src="https://cdn.kendostatic.com/2022.2.621/js/kendo.all.min.js"></script>
 	<script src="https://cdn.kendostatic.com/2022.2.621/js/kendo.aspnetmvc.min.js"></script>
     <script src="https://cdn.kendostatic.com/2022.2.621/js/cultures/kendo.culture.es-MX.min.js"></script>
-    <script src="~/lib/kendo-ui/js/messages/kendo.messages.es-MX.min.js"></script>
-    <script src="~/lib/excel_sheet/xlsx.full.min.js"></script>
+    <script src="@Url.Content("~/lib/kendo-ui/js/messages/kendo.messages.es-MX.min.js")"></script>
+    <script src="@Url.Content("~/lib/excel_sheet/xlsx.full.min.js")"></script>
 
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
-    <script src="~/lib/moment/moment.js"></script>
-    <script src="~/lib/moment/moment-with-locales.js"></script>
-    <script src="~/lib/underscore/underscore.js"></script>
+    <script src="@Url.Content("~/lib/moment/moment.js")"></script>
+    <script src="@Url.Content("~/lib/moment/moment-with-locales.js")"></script>
+    <script src="@Url.Content("~/lib/underscore/underscore.js")"></script>
 
     <!--<script src="~/js/bootstrap.min.js"></script>-->
 
-    <script src="~/lib/swalert/sweetalert2.min.js"></script>
-    <link href="~/lib/swalert/sweetalert2.min.css" rel="stylesheet" />
+    <script src="@Url.Content("~/lib/swalert/sweetalert2.min.js")"></script>
+    <link href="@Url.Content("~/lib/swalert/sweetalert2.min.css")" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 @* 
    
