--- a/Views/adConfiguracionCompany/adConfiguracionCompany.cshtml
+++ b/Views/adConfiguracionCompany/adConfiguracionCompany.cshtml
@@ -9,7 +9,7 @@
         <div class="container-fluid p-lg-4 p-4">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="text-center">Informacion de la empresa</h2>
+                    <h2 class="text-center">Información de la empresa</h2>
                 </div>
             </div>
             <div class="row">
@@ -28,7 +28,7 @@
                     </div>
                     <div class="row mt-lg-2 mt-2">
                         <div class="col-lg-12">
-                            <label> Seleccione su Municipio</label>
+                            <label> Seleccione su municipio</label>
                             <input id="municipioDropDownList" class=" w-100 drop" />
                         </div>
                     </div>
@@ -47,13 +47,13 @@
                     </div>
                     <div class="row mt-lg-2 mt-2">
                         <div class="col-lg-12">
-                            <label  class="form-label">Descripcion de la empresa</label>
+                            <label  class="form-label">Descripción de la empresa</label>
                             <input type="text" class="w-100 form-control" id="Input_Description">
                         </div>
                     </div>
                     <div class="row mt-lg-2 mt-2">
                         <div class="col-lg-12">
-                            <label class="form-label">Razon Saocial</label>
+                            <label class="form-label">Razón social</label>
                             <input type="text" class="w-100 form-control" id="Input_RazonSocial">
                         </div>
                     </div>
@@ -62,7 +62,7 @@
 
                     <div class="row mt-lg-0 mt-2">
                         <div class="col-lg-12">
-                            <label class="form-label">Direccion</label>
+                            <label class="form-label">Dirección</label>
                             <input type="text" class="w-100 form-control" id="Input_Direccion">
                         </div>
                     </div>
@@ -108,13 +108,13 @@
                     </div>
                     <div class="row mt-lg-4 mt-2">
                         <div class="col-lg-12">
-                            <label class="form-label">Numero de Telefono 1</label>
+                            <label class="form-label">Número de teléfono 1</label>
                             <input type="text" class="w-100 form-control" id="Input_Number1">
                         </div>
                     </div>
                     <div class="row mt-lg-2 mt-2">
                         <div class="col-lg-12">
-                            <label class="form-label">Numero de Telefono 2</label>
+                            <label class="form-label">Número de teléfono 2</label>
                             <input type="text" class="w-100 form-control" id="Input_Number2">
                         </div>
                     </div>
