--- a/Views/adRazonesCancelacion/adRazonesCancelacion.cshtml
+++ b/Views/adRazonesCancelacion/adRazonesCancelacion.cshtml
@@ -9,17 +9,17 @@
     <div class="card">
         <div class="container-fluid p-lg-4 p-3">
             <div class="row">
-                <h2 class="text-center ">Razones de Cancelacion</h2>
+                <h2 class="text-center ">Razones de Anulación</h2>
             </div>
             <div class="row">
-                <label class="mb-2">Ingrese la razón de cancelacion</label>
+                <label class="mb-2">Ingrese la razón de anulación</label>
             </div>
             <div class="row">
                 <div class="col-lg-8 col-12 mb-2 mb-lg-0">
                     <input type="text" class="form-control" id="input_RazonCancel">
                 </div>
                 <div class="col-lg-4 col-12">
-                    <button type="button" class="btn btn-success w-100" id="BTN_RazonCancel"><i class="bi bi-plus-circle fs-6"></i> <span> Agregar razon de cancelacion</span></button>
+                    <button type="button" class="btn btn-success w-100" id="BTN_RazonCancel"><i class="bi bi-plus-circle fs-6"></i> <span> Agregar razón de anulación</span></button>
                 </div>
             </div>
         </div>
