--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="@Url.Content("~/css/login.css")" />
 
     <script src="@Url.Content("~/js/jquery-3.3.1.min.js")"></script>
-    <script src="~/js/bootstrap.min.js"></script>
+    <script src="@Url.Content("~/js/bootstrap.min.js")"></script>
 
     @*<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">*@
     <link rel="stylesheet" href="@Url.Content("~/lib/bootstrap-icons/font/bootstrap-icons.min.css")" />
@@ -189,7 +189,7 @@
                 if (localStorage.companydatos !== undefined) {
 
                     var DataCompany = JSON.parse(localStorage.getItem("companydatos"))
-                    //console.log(DataCompany)
+                    console.log('@Url.Content("~/")' + DataCompany.compamyLogo)
                     $("#Company_logo").attr("src", '@Url.Content("~/")'+ DataCompany.compamyLogo);
                     $("#Company_name").text(DataCompany.companyName);
                     $("#Company_contacto").html("")
