--- a/Views/adAnulacionEliminacionVales/adAnulacionEliminacionVales.cshtml
+++ b/Views/adAnulacionEliminacionVales/adAnulacionEliminacionVales.cshtml
@@ -9,7 +9,7 @@
         <div class="container-fluid p-lg-4 p-4">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2 class="text-center">Anulacion y eliminacion de Vales</h2>
+                    <h2 class="text-center">Anulación y eliminación de Vales</h2>
                 </div>
             </div>
             <div class="row">
@@ -112,7 +112,7 @@
     }
 </style>
 <script type="text/javascript">
-    (function () { 
+    (function () {
         $.extend({
             GRID: {
                 loadGrid: function () {
@@ -299,8 +299,7 @@
                                 $.GRID.dataGrid()
                             })
                         }
-                    },
-                    
+                    },               
                     modal: {
                         ValeCombustubibleID: "",
                         DropDownlist: {
@@ -329,8 +328,6 @@
                             }
 
                         },
-
-
                         BTN_RazonCancelacion: function () {
                             var _this = this
                             $("#BTN_Anular").on("click", function () {
