--- a/Views/adRegistarCompany/adRegistarCompany.cshtml
+++ b/Views/adRegistarCompany/adRegistarCompany.cshtml
@@ -8,18 +8,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COMBUSTIBLEAESCORE</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="@Url.Content("~/lib/bootstrap/css/bootstrap.min.css")" />
 
-    <script src="~/js/jquery-3.3.1.min.js"></script>
-    <script src="~/js/bootstrap.min.js"></script>
+    <script src="@Url.Content("~/js/jquery-3.3.1.min.js")"></script>
+    <script src="@Url.Content("~/js/bootstrap.min.js")"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <script src="~/lib/swalert/sweetalert2.min.js"></script>
-    <link href="~/lib/swalert/sweetalert2.min.css" rel="stylesheet" />
-    <script src="~/js/popper.min.js"></script>
-    <link href="~/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="~/css/materialdatetimepicker.css" rel="stylesheet" />
+    <script src="@Url.Content("~/lib/swalert/sweetalert2.min.js")"></script>
+    <link href="@Url.Content("~/lib/swalert/sweetalert2.min.css")" rel="stylesheet" />
+    <script src="@Url.Content("~/js/popper.min.js")"></script>
+    <link href="@Url.Content("~/css/bootstrap.min.css")" rel="stylesheet" />
+    <link href="@Url.Content("~/css/materialdatetimepicker.css")" rel="stylesheet" />
 
 
 </head>
@@ -31,7 +31,7 @@
                     <form class="card">
                         <div class="row">
                             <div class="col-lg-12">
-                                <h2 class="text-center mt-lg-5">Registo de empresa</h2>
+                                <h2 class="text-center mt-lg-5">Registro de empresa</h2>
                             </div>
                         </div>
                         <div class="card-body p-lg-4 mx-md-4 row">
@@ -55,7 +55,7 @@
                                 </div>
 
                                 <div class="form-outline mb-4">
-                                    <label class="form-label" for="">Correo Electronico</label>
+                                    <label class="form-label" for="">Correo electrónico</label>
                                     <input type="email" id="email" class="form-control" placeholder=" Ingresa tu correo" />
 
                                 </div>
