--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -37,7 +37,7 @@
                             <span class="Titulo fw-bold">¿Qué es vales combustible?</span>
                             <p class="mt-2 descripcion">Esta aplicación permite realizar un control del consumo y gasto de combustible para una flota de vehículos. A través de los gráficos pueden realizar un análisis de comportamientos de cada unidad, de consumo, recargas y eficiencia real. </p>
 
-                            <span>Powered By Software Mobile Solutions @@2024</span>
+                            <span>Powered By Software Mobile Solutions 2024</span>
                         </div>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                                 <div class="card-body p-lg-5 ">
 
                                     <div class="text-center">
-                                        <img src="~/images/logo.png"
+                                        <img src="@Url.Content("~/images/logo.png")"
                                              style="width: 185px;" alt="logo" id="Company_logo">
                                         <h4 class="mt-1 pb-1" id="Company_name">Vales Combustible</h4>
                                     </div>
