--- a/Views/adRegistarCompany/adRegistarCompany.cshtml
+++ b/Views/adRegistarCompany/adRegistarCompany.cshtml
@@ -20,7 +20,7 @@
     <script src="@Url.Content("~/js/popper.min.js")"></script>
     <link href="@Url.Content("~/css/bootstrap.min.css")" rel="stylesheet" />
     <link href="@Url.Content("~/css/materialdatetimepicker.css")" rel="stylesheet" />
-
+    <link rel="icon" type="image/png" href="@Url.Content("~/images/favicon.ico")" sizes="32x32">
 
 </head>
 <body>
