--- a/Views/adUsuariosVehiculos/adUsuariosVehiculos.cshtml
+++ b/Views/adUsuariosVehiculos/adUsuariosVehiculos.cshtml
@@ -4,7 +4,7 @@
 <section>
     <div class="container-fluid card mt-1 mt-lg-0">
         <div class="row mt-4">
-            <h2 class="text-center">Administracion de vehiculos por usuario</h2>
+            <h2 class="text-center">Administración de vehiculos por usuario</h2>
         </div>
         <div class="row">
             <div class="col-lg-12 px-5 pb-5 pt-2" >
